--- a/MyMart/src/main/resources/application.properties
+++ b/MyMart/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mymart26
-spring.datasource.username=yeswanth
-spring.datasource.password=Admin@12345
+spring.datasource.username=admin
+spring.datasource.password=admin12345
 
 spring.jpa.hibernate.ddl-auto = update
 
