--- a/MyMart/src/main/resources/application.properties
+++ b/MyMart/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mymartdatabase-1.cro2ik468akt.ap-south-1.rds.amazonaws.com/mymart
+spring.datasource.url=jdbc:mysql://mymartdatabase-1.cro2ik468akt.ap-south-1.rds.amazonaws.com/yeswanth
 spring.datasource.username=admin
 spring.datasource.password=admin12345
 
