--- a/MyMart/src/main/resources/application.properties
+++ b/MyMart/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mymart
+spring.datasource.url=jdbc:mysql://localhost:3306/yeswanth
 spring.datasource.username=root
 spring.datasource.password=shital
 
